--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -25,8 +25,9 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label fx:id="desen" layoutX="319.0" layoutY="297.0"  text="" />
+      <Label fx:id="desen" layoutX="319.0" layoutY="297.0" text="" />
       <Label fx:id="poezie" layoutX="319.0" layoutY="316.0" text="" />
       <Label fx:id="comori" layoutX="320.0" layoutY="338.0" text="" />
+      <Button layoutX="518.0" layoutY="175.0" mnemonicParsing="false" onAction="#sendMessage" text="Send" />
    </children>
 </AnchorPane>
